feat: incluindo a funcionalidade de edição das tarefas e tratamento de erros